--- a/style.css
+++ b/style.css
@@ -2,7 +2,13 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Quicksand Book Oblique', sans-serif;
+    font-family: 'Quicksand Book', sans-serif;
+    font-family: 'Quicksand Dash', sans-serif;
+    font-family: 'Quicksand Light Oblique', sans-serif;
+    font-family: 'Quicksand Light', sans-serif;
+    font-family: 'Quicksand Bold Oblique', sans-serif;
+    font-family: 'Quicksand Bold', sans-serif;
     color: #fff;
     background: #1C1C1C;
 }
@@ -19,22 +25,38 @@ width: 550px;
 height: 260px;
 left: 0px;
 top: 0px;
+padding-top: 10px;
 border-radius: 1em 1em 0 0;
 background: linear-gradient(246.26deg, #585DFE 0%, #FB3796 100%);
 }
-
-#number-el {
-    font-size: x-large;
-    font-weight: bolder;
-
+p{
+    font-family: 'Quicksand Light', sans-serif;
+}
+label{
+    width: 20px;
+    padding: 0, 2px;
 }
 #number-input{
-    width: 100px;
+    width: 200px;
     margin-top: 30px;
     padding: 20px;
     border-radius: 5px;
     border: none;
+    background-color: #022658;
+    color: #fff;
 }
+#number-input:hover{
+    cursor: pointer;
+    opacity: .8;
+    border: none;
+}
+
+#number-input:focus{
+    outline: none;
+    font-family: 'Quicksand Bold', sans-serif;
+}
+
+
 
 .default-values{
 position: absolute;
@@ -42,22 +64,36 @@ width: 550px;
 height: 250px;
 top: 270px;
 background-color: #022658;
+border-radius: 0 0 1em 1em;
 }
 
 
 
 #convert-btn{
+font-family: 'Quicksand Bold', sans-serif;
 background-color: #022658;
 color: white;
+font-weight: bold;
 border: none;
-padding: 10px;
+padding: 20px;
 border-radius: 5px;
+transition: 0.3s;
+opacity:initial;
 }
+#convert-btn:hover{
+    opacity: .8;
+    font-weight: lighter;
+    cursor: pointer;
+}
+
 @media(max-width: 800px) {
     h1 {
         font-size: 1.25rem;
     }
 }
+
+
+
 
 
 
